created a basic kubernetes based service discovery setup, which currently just logs the results

--- a/bungeecord/pom.xml
+++ b/bungeecord/pom.xml
@@ -25,6 +25,13 @@
             <version>1.16-R0.4-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+
+        <!-- Internal modules -->
+        <dependency>
+            <groupId>com.dyescape.bungeekube</groupId>
+            <artifactId>kubernetes</artifactId>
+            <version>${project-version}</version>
+        </dependency>
     </dependencies>
 
     <build>
