--- a/kubernetes/pom.xml
+++ b/kubernetes/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>bungeekube</artifactId>
         <groupId>com.dyescape.bungeekube</groupId>
-        <version>1.0.0</version>
+        <version>${project-version}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>kubernetes</artifactId>
