--- a/velocity/pom.xml
+++ b/velocity/pom.xml
@@ -10,21 +10,21 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>bungeecord</artifactId>
+    <artifactId>velocity</artifactId>
     <version>${project-version}</version>
 
     <repositories>
         <repository>
-            <id>bungeecord-repo</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <id>velocity-repo</id>
+            <url>https://nexus.velocitypowered.com/repository/maven-public</url>
         </repository>
     </repositories>
 
     <dependencies>
         <dependency>
-            <groupId>net.md-5</groupId>
-            <artifactId>bungeecord-api</artifactId>
-            <version>1.16-R0.4</version>
+            <groupId>com.velocitypowered</groupId>
+            <artifactId>velocity-api</artifactId>
+            <version>1.1.8</version>
             <scope>provided</scope>
         </dependency>
 
