--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>assembly</module>
         <module>kubernetes</module>
         <module>velocity</module>
+        <module>api</module>
     </modules>
 
     <name>Bungeekube</name>
