--- a/velocity/pom.xml
+++ b/velocity/pom.xml
@@ -31,6 +31,11 @@
         <!-- Internal modules -->
         <dependency>
             <groupId>com.dyescape.bungeekube</groupId>
+            <artifactId>api</artifactId>
+            <version>${project-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.dyescape.bungeekube</groupId>
             <artifactId>kubernetes</artifactId>
             <version>${project-version}</version>
         </dependency>
